feat: enhanced base + md to html generation and mustache

--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -2,5 +2,7 @@
   "extends": "@tsconfig/vite-react",
   "compilerOptions": {
     "jsx": "preserve",
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
   }
 }
