--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,14 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/.pnp
-.pnp.js
+node_modules
 
 # testing
 /coverage
 
 # next.js
-/.next/
-/out/
+.next/
+out/
 
 # production
 /build
@@ -53,7 +51,7 @@ robots.txt
 !.yarn/sdks
 !.yarn/versions
 
-/public/dsfr/
+public/dsfr/
 
-/public/sitemap.xml
-/public/sitemap*.xml
+public/sitemap.xml
+public/sitemap*.xml
