--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
   "author": "Lilian Saget-Lethias <lilian.sagetlethias@gmail.com>",
   "license": "MIT",
   "workspaces": [
-    "packages/*"
+    "packages/*",
+    "examples/*"
   ],
   "devDependencies": {
     "@eslint/js": "^9.0.0",
     "@next/eslint-plugin-next": "14",
     "@tsconfig/recommended": "^1.0.6",
-    "@tsconfig/vite-react": "^3.0.2",
     "@types/eslint": "^8.56.7",
     "@types/node": "^20",
     "@vitejs/plugin-vue": "^5.0.4",
@@ -24,11 +24,9 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-simple-import-sort": "^12.0.0",
     "eslint-plugin-typescript-sort-keys": "^3.2.0",
     "eslint-plugin-unused-imports": "^3.1.0",
-    "marked": "^12.0.1",
     "prettier": "^3.2.5",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
@@ -36,7 +34,6 @@
     "typescript": "^5.4.4",
     "typescript-eslint": "7.5.0",
     "vite": "^5.2.8",
-    "vite-plugin-dts": "^3.8.1",
     "vue": "^3.4.21",
     "vue-tsc": "^2.0.12"
   }
