--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,8 +1,7 @@
 {
   "name": "@incubateur-ademe/legal-pages-react",
-  "private": true,
   "version": "0.0.1",
-  "description": "Legal pages as components",
+  "description": "Legal pages as components for React",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
@@ -12,15 +11,29 @@
   "author": "Lilian Saget-Lethias <lilian.sagetlethias@gmail.com>",
   "license": "MIT",
   "type": "module",
+  "scripts": {
+    "build": "tsc && vite build"
+  },
   "peerDependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@incubateur-ademe/legal-pages-markdown": "^0.0.1",
+    "@tsconfig/vite-react": "^3.0.2",
+    "@types/dompurify": "^3.0.5",
+    "@types/mustache": "^4.2.5",
     "@types/react": "^18.2.75",
     "@types/react-dom": "^18.2.24",
     "@vitejs/plugin-react": "^4.2.1",
+    "eslint-plugin-react": "^7.34.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "rollup-plugin-preserve-directives": "^0.4.0",
+    "vite-plugin-dts": "^3.8.1"
+  },
+  "dependencies": {
+    "dompurify": "^3.1.0",
+    "mustache": "^4.2.0"
   }
 }
