--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "packages/*",
     "examples/*"
   ],
+  "scripts": {
+    "build": "turbo build",
+    "build:lib": "turbo build --filter=./packages/*",
+    "dev": "turbo dev"
+  },
   "devDependencies": {
-    "@eslint/js": "^9.0.0",
-    "@next/eslint-plugin-next": "14",
+    "@eslint/js": "^9.1.1",
     "@tsconfig/recommended": "^1.0.6",
-    "@types/eslint": "^8.56.7",
+    "@types/eslint": "^8.56.10",
     "@types/node": "^20",
     "@vitejs/plugin-vue": "^5.0.4",
     "eslint": "^8",
@@ -24,17 +28,18 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-simple-import-sort": "^12.0.0",
+    "eslint-plugin-simple-import-sort": "^12.1.0",
     "eslint-plugin-typescript-sort-keys": "^3.2.0",
     "eslint-plugin-unused-imports": "^3.1.0",
     "prettier": "^3.2.5",
-    "ts-node": "^10.9.1",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "turbo": "^1.13.2",
-    "typescript": "^5.4.4",
-    "typescript-eslint": "7.5.0",
-    "vite": "^5.2.8",
-    "vue": "^3.4.21",
-    "vue-tsc": "^2.0.12"
+    "tsx": "^4.7.3",
+    "turbo": "^1.13.3",
+    "typescript": "^5.4.5",
+    "typescript-eslint": "7.7.1",
+    "vite": "^5.2.10",
+    "vue": "^3.4.25",
+    "vue-tsc": "^2.0.14"
   }
 }
