chore: clean, add lint and doc

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,8 +13,8 @@
   "[javascript]": {
     "editor.defaultFormatter": "dbaeumer.vscode-eslint"
   },
-  "[mdx]": {
-    "editor.defaultFormatter": "vscode.markdown-language-features"
+  "[md]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "files.associations": {
     ".env*": "dotenv",
