--- a/examples/react-next/package.json
+++ b/examples/react-next/package.json
@@ -11,7 +11,9 @@
     "predev": "only-include-used-icons",
     "prebuild": "only-include-used-icons",
     "dev": "next dev",
-    "build": "next build"
+    "build": "next build",
+    "lint": "next lint",
+    "lint:fix": "next lint --fix"
   },
   "dependencies": {
     "@codegouvfr/react-dsfr": "^1.9.9",
