--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "lint": "turbo lint"
   },
   "devDependencies": {
+    "@changesets/changelog-git": "^0.2.0",
+    "@changesets/cli": "^2.27.1",
     "@eslint/js": "^9.1.1",
     "@tsconfig/recommended": "^1.0.6",
     "@types/eslint": "^8.56.10",
