chore(release-next): changeset

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@incubateur-ademe/legal-pages-react",
-  "version": "0.0.2",
+  "version": "0.0.3-next.0",
   "description": "Legal pages as components for React",
   "files": [
     "dist"
@@ -56,7 +56,7 @@
     "vite-plugin-dts": "^3.9.0"
   },
   "dependencies": {
-    "@incubateur-ademe/legal-pages-markdown": "*",
+    "@incubateur-ademe/legal-pages-markdown": "0.0.3-next.0",
     "mustache": "^4.2.0"
   }
 }
