--- a/packages/markdown/package.json
+++ b/packages/markdown/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@incubateur-ademe/legal-pages-markdown",
-  "version": "0.0.2",
+  "version": "0.0.3-next.0",
   "description": "Legal pages as components as raw markdown",
   "types": "./types.d.ts",
   "type": "module",
