--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://unpkg.com/@changesets/config@3.0.0/schema.json",
-  "changelog": "@changesets/changelog-git",
+  "changelog": false,
   "commit": false,
   "linked": [["@incubateur-ademe/*"]],
   "access": "public",
