--- a/packages/markdown/package.json
+++ b/packages/markdown/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@incubateur-ademe/legal-pages-markdown",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Legal pages as components as raw markdown",
   "types": "./types.d.ts",
   "type": "module",
@@ -18,6 +18,8 @@
   "author": "Incubateur ADEME <accelerateurdelatransitionecologique@ademe.fr>",
   "license": "MIT",
   "scripts": {
+    "clean": "rimraf html/* md/*",
+    "prebuild": "yarn clean",
     "build": "tsx scripts/build.ts",
     "dev": "tsx scripts/dev.ts",
     "lint": "prettier --check src/",
@@ -31,6 +33,7 @@
     "glob": "^10.3.12",
     "marked": "^12.0.2",
     "marked-gfm-heading-id": "^3.1.3",
-    "remark-parse": "^11.0.0"
+    "remark-parse": "^11.0.0",
+    "rimraf": "^5.0.5"
   }
 }
