--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -4,5 +4,6 @@
     "jsx": "preserve",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-  }
+  },
+  "exclude": ["node_modules", "dist"]
 }
