wip: base generated components

--- a/packages/vue3/package.json
+++ b/packages/vue3/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@incubateur-ademe/legal-pages-markdown": "0.3.0",
     "vue": "^3.4.29"
   },
   "devDependencies": {
