--- a/packages/vue3/package.json
+++ b/packages/vue3/package.json
@@ -13,8 +13,14 @@
     "vue": "^3.4.29"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/deep-diff": "^1.0.5",
+    "@types/js-yaml": "^4.0.9",
     "@vitejs/plugin-vue": "^5.0.5",
+    "axios": "^1.7.2",
+    "deep-diff": "^1.0.2",
     "eslint-plugin-vue": "^9.27.0",
+    "js-yaml": "^4.1.0",
     "vite": "^5.3.1",
     "vue-eslint-parser": "^9.4.3",
     "vue-tsc": "^2.0.21"
