--- a/packages/vue3/tsconfig.node.json
+++ b/packages/vue3/tsconfig.node.json
@@ -7,7 +7,8 @@
     "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true,
     "strict": true,
-    "noEmit": true
+    "noEmit": true,
+    "downlevelIteration": true
   },
   "include": ["vite.config.ts", "scripts/**/*.ts"]
 }
