clean eslint and deps

--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "devDependencies": {
     "@changesets/changelog-git": "^0.2.0",
     "@changesets/cli": "^2.27.1",
+    "@rushstack/eslint-patch": "^1.8.0",
     "@eslint/js": "^9.1.1",
+    "@tsconfig/node20": "^20.1.4",
     "@tsconfig/recommended": "^1.0.6",
     "@types/eslint": "^8.56.10",
     "@types/node": "^20",
@@ -44,7 +46,7 @@
     "turbo": "^2.0.6",
     "typescript": "^5.4.5",
     "typescript-eslint": "7.7.1",
-    "vite": "^5.2.10"
+    "vite": "^5.3.1"
   },
   "packageManager": "yarn@1.22.22"
 }
