--- a/packages/vue3/package.json
+++ b/packages/vue3/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "type-check": "vue-tsc --build --force",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -14,8 +15,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
+    "@vue/eslint-config-typescript": "^13.0.0",
+    "@vue/tsconfig": "^0.5.1",
     "eslint-plugin-vue": "^9.27.0",
-    "vite": "^5.3.1",
     "vue-eslint-parser": "^9.4.3",
     "vue-tsc": "^2.0.21"
   }
