--- a/packages/vue3/tsconfig.node.json
+++ b/packages/vue3/tsconfig.node.json
@@ -1,13 +1,13 @@
 {
+  "extends": "@tsconfig/node20",
   "compilerOptions": {
     "composite": true,
-    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
-    "skipLibCheck": true,
+    "noEmit": true,
+    "tsBuildInfoFile": "./node_modules/.tmp/packages/vue3/tsconfig.node.tsbuildinfo",
+
     "module": "ESNext",
-    "moduleResolution": "bundler",
+    "moduleResolution": "Bundler",
     "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "noEmit": true
   },
-  "include": ["vite.config.ts", "scripts/**/*.ts"]
+  "include": ["vite.config.*", "scripts/**/*.*", ".eslintrc.*"]
 }
