--- a/packages/vue3/tsconfig.app.json
+++ b/packages/vue3/tsconfig.app.json
@@ -2,8 +2,16 @@
   "extends": "@vue/tsconfig/tsconfig.dom.json",
   "compilerOptions": {
     "composite": true,
-    "noEmit": true,
     "tsBuildInfoFile": "./node_modules/.tmp/packages/vue3/tsconfig.app.tsbuildinfo",
+    "isolatedModules": true,
+    "outDir": "dist",
+    "declaration": true,
+
+
+    "baseUrl": ".",
+    "paths": {
+      "@/generated/*": ["./generated/*"]
+    }
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"]
+  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue", "generated/**/*"]
 }
