--- a/packages/vue3/tsconfig.node.json
+++ b/packages/vue3/tsconfig.node.json
@@ -8,6 +8,8 @@
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "allowSyntheticDefaultImports": true,
+    "lib": ["ESNext"],
   },
+
   "include": ["vite.config.*", "scripts/**/*.*", ".eslintrc.*"]
 }
