--- a/packages/markdown/package.json
+++ b/packages/markdown/package.json
@@ -2,6 +2,7 @@
   "name": "@incubateur-ademe/legal-pages-markdown",
   "version": "0.3.0",
   "description": "Legal pages as components as raw markdown",
+  "main": "./types.d.ts",
   "types": "./types.d.ts",
   "type": "module",
   "files": [
