--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -29,8 +29,8 @@
     "lint:fix": "eslint src --fix"
   },
   "peerDependencies": {
-    "react": "^18.3.0",
-    "react-dom": "^18.3.0"
+    "react": ">=18",
+    "react-dom": ">=18"
   },
   "devDependencies": {
     "@tsconfig/vite-react": "^3.0.2",
